--- a/index.html
+++ b/index.html
@@ -8,6 +8,30 @@
     <title>Discord</title>
 </head>
 <body>
+    <main>
+        <!--creazione sezioni-->
+        <section>
+            <div class="container"></div>
+        </section>
+
+        <section>
+            <div class="container"></div>
+        </section>
+
+        <section>
+            <div class="container"></div>
+        </section>
+
+        <section>
+            <div class="container"></div>
+        </section>
+
+        <section>
+            <div class="container"></div>
+        </section>
+
+
+    </main>
     
 </body>
 </html>
