copiato sezioni e dato colore

--- a/index.html
+++ b/index.html
@@ -8,10 +8,42 @@
     <title>Discord</title>
 </head>
 <body>
+    <header>
+        <nav></nav>
+        
+        <section>
+            <div class="container"></div>
+        </section>
+    </header>
+
+
     <main>
         <!--creazione sezioni-->
         <section>
-            <div class="container"></div>
+            <div class="container">
+                <div class="row">
+                    <div class="col col-2"></div>
+                    <div class="col col-1"></div>
+                </div>
+            </div>
+        </section>
+
+        <section>
+            <div class="container">
+                <div class="row">
+                    <div class="col col-1"></div>
+                    <div class="col-2"></div>
+                </div>
+            </div>
+        </section>
+
+        <section>
+            <div class="container">
+                <div class="row">
+                    <div class="col col-2"></div>
+                    <div class="col col-1"></div>
+                </div>               
+            </div>
         </section>
 
         <section>
@@ -21,17 +53,9 @@
         <section>
             <div class="container"></div>
         </section>
-
-        <section>
-            <div class="container"></div>
-        </section>
-
-        <section>
-            <div class="container"></div>
-        </section>
-
-
     </main>
+
+
     
 </body>
 </html>
