--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
                     <li><a href="#">link</a></li>
                     <li><a href="#">link</a></li>
                 </ul>
-                
+            </div>
+
+            <div class="login-container">
+                <span>login</span>
             </div>
         </nav>
     </header>
