lavoro sulla navbar

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <header>
+        <!--creazione navbar-->
         <nav>
             <div class="logo-container">
                 <span class="title-logo">logo</span>
@@ -23,7 +24,7 @@
             </div>
 
             <div class="login-container">
-                <span>login</span>
+                <span class="title-login">login</span>
             </div>
         </nav>
     </header>
