--- a/index.html
+++ b/index.html
@@ -29,6 +29,32 @@
         </nav>
     </header>
 
+    <section>
+        <div class="container">
+
+        </div>
+    </section>
+
+    <section>
+        <div class="container">
+
+        </div>
+    </section>
+
+    <section>
+        <div class="container">
+
+        </div>
+    </section>
+
+    <section>
+        <div class="container">
+
+        </div>
+    </section>
+
+    
+
 
     
 </body>
