--- a/index.html
+++ b/index.html
@@ -76,11 +76,25 @@
         <section class="bg-grey">
             <div class="container">                 
                 <div class="row">
-                    <div class="col-1"></div>
+                    <div class="col bg-green"></div>
                 </div>
             </div>
         </section>
     </main>
+
+    <footer>
+        <section class="container">
+
+            <div class="row">
+                <div class="col"></div>
+                <div class="col"></div>
+                <div class="col"></div>
+                <div class="col"></div>
+                <div class="col"></div>
+            </div>
+
+        </section>
+    </footer>
 
     
 </body>
